--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,8 +6,8 @@
 
             <!--First column-->
             <div class="col-md-3 offset-md-1">
-                <h5 class="title">Footer Content </h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Footer контент</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at eligendi eum illum minima, optio quasi recusandae saepe similique voluptate. Enim ex exercitationem id in laboriosam placeat qui sit veniam.</p>
             </div>
             <!--/.First column-->
 
@@ -15,12 +15,12 @@
 
             <!--Second column-->
             <div class="col-md-2 offset-md-1">
-                <h5 class="title">Links</h5>
+                <h5 class="title">Ссылки</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
-                    <li><a href="#!">Link 3</a></li>
-                    <li><a href="#!">Link 4</a></li>
+                    <li><a href="#!">Ссылка 1</a></li>
+                    <li><a href="#!">Ссылка 2</a></li>
+                    <li><a href="#!">Ссылка 3</a></li>
+                    <li><a href="#!">Ссылка 4</a></li>
                 </ul>
             </div>
             <!--/.Second column-->
@@ -29,12 +29,12 @@
 
             <!--Third column-->
             <div class="col-md-2">
-                <h5 class="title">Links</h5>
+                <h5 class="title">Ссылки</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
-                    <li><a href="#!">Link 3</a></li>
-                    <li><a href="#!">Link 4</a></li>
+                    <li><a href="#!">Ссылка 1</a></li>
+                    <li><a href="#!">Ссылка 2</a></li>
+                    <li><a href="#!">Ссылка 3</a></li>
+                    <li><a href="#!">Ссылка 4</a></li>
                 </ul>
             </div>
             <!--/.Third column-->
@@ -43,12 +43,12 @@
 
             <!--Fourth column-->
             <div class="col-md-2">
-                <h5 class="title">Links</h5>
+                <h5 class="title">Ссылки</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
-                    <li><a href="#!">Link 3</a></li>
-                    <li><a href="#!">Link 4</a></li>
+                    <li><a href="#!">Ссылка 1</a></li>
+                    <li><a href="#!">Ссылка 2</a></li>
+                    <li><a href="#!">Ссылка 3</a></li>
+                    <li><a href="#!">Ссылка 4</a></li>
                 </ul>
             </div>
             <!--/.Fourth column-->
@@ -77,7 +77,7 @@
     </div>
     <div class="footer-copyright">
         <div class="container-fluid">
-            © 2018 Copyright: <a> SpaceProd </a>
+            © 2018 Copyright: <a>Записки марсианина</a>
         </div>
     </div>
 </footer>
