--- a/src/app/components/home_screen/home-screen.component.html
+++ b/src/app/components/home_screen/home-screen.component.html
@@ -5,17 +5,17 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h1 class="h1-reponsive white-text font-up font-bold mb-3 animated fadeInDown"
-                            data-wow-delay="0.3s"><strong>Memories of Martian</strong></h1>
+                            data-wow-delay="0.3s"><strong>Записки марсианина</strong></h1>
                         <hr class="hr-light mt-4 animated fadeInDown" data-wow-delay="0.4s">
                         <h5 class="font-up mb-5 white-text animated fadeInDown"
-                            data-wow-delay="0.4s"><strong>Extraordinary thoughts about space and
-                            not only</strong></h5>
+                            data-wow-delay="0.4s"><strong>Экстраординарные мысли о
+                            космосе и не только</strong></h5>
                         <a class="btn btn-outline-white animated fadeInDown waves-light"
-                           data-wow-delay="0.4s" mdbRippleRadius>Memories</a>
+                           data-wow-delay="0.4s" mdbRippleRadius>Записки</a>
                         <a class="btn btn-outline-white animated fadeInDown waves-light"
                            data-toggle="modal" data-target="#basicExample"
-                           (click)="demoBasic.show()" data-wow-delay="0.4s" mdbRippleRadius>About
-                            project</a>
+                           (click)="demoBasic.show()" data-wow-delay="0.4s" mdbRippleRadius>О
+                            проекте</a>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title w-100" id="myModalLabel">About project</h4>
+                <h4 class="modal-title w-100" id="myModalLabel">О проекте</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                         (click)="demoBasic.hide()">
                     <span aria-hidden="true">×</span>
@@ -64,6 +64,7 @@
                 consequuntur deserunt dolor dolore earum eligendi enim est et fugiat hic in
                 laboriosam minus natus, nihil non nulla numquam odit possimus praesentium
                 quisquam recusandae similique, soluta sunt tenetur ullam veritatis!
+                loremru
             </div>
         </div>
     </div>
