--- a/src/app/components/item_menu/item_menu.component.html
+++ b/src/app/components/item_menu/item_menu.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="row py-5 mt-4">
         <div class="col-md-12 text-center">
@@ -9,7 +10,7 @@
 </div>
 <div class="row justify-content-md-center" style="margin: 10px 0 10px 0">
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -22,17 +23,16 @@
 
             <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">В космосе нет времен года: нет зимы и лета, нет весны и осени.
+                    Нет здесь какого-то конкретного вечера или утра, а есть только космос и более ничего.</p>
+                <h5 class="author">Рэй Брэдбери</h5>
             </div>
 
         </div>
     </div>
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -45,17 +45,16 @@
 
             <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">“Если космос располагает безграничным запасом времени,
+                    это не просто означает, что может произойти всё, что угодно. Это означает,
+                    что всё когда-нибудь действительно произойдет.”</p>
+                <h5 class="author">Эрленд Лу</h5>
             </div>
 
         </div>
     </div>
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -66,13 +65,10 @@
                 </a>
             </div>
 
-            <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">Это один маленький шаг для человека, но гигантский скачок для всего человечества.
+                </p>
+                <h5 class="author">Нил Армстронг</h5>
             </div>
 
         </div>
@@ -81,7 +77,7 @@
 
 <div class="row justify-content-md-center" style="margin: 10px 0 10px 0">
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -94,17 +90,14 @@
 
             <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">Рано или поздно мы должны выйти за пределы нашего маленького голубого шарика или исчезнуть.</p>
+                <h5 class="author">Илон Маск</h5>
             </div>
 
         </div>
     </div>
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -117,17 +110,14 @@
 
             <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">Космос лучше всего исследован научными фантастами.</p>
+                <h5 class="author">Неизвестный автор</h5>
             </div>
 
         </div>
     </div>
     <div class="col col-md-3">
-        <div class="card">
+        <div class="card cards">
 
             <!--Card image-->
             <div class="view hm-white-slight waves-light" mdbRippleRadius>
@@ -140,11 +130,9 @@
 
             <!--Card content-->
             <div class="card-body">
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make
-                    up the bulk of the card's content.</p>
+                <p class="card-text">Принимая во внимание тот факт, насколько велика наша Вселенная,
+                    вероятно, прямо где-то сейчас на её просторах ведутся космические сражения.</p>
+                <h5 class="author">Неизвестный автор</h5>
             </div>
 
         </div>
