--- a/src/app/components/navbar/header.component.html
+++ b/src/app/components/navbar/header.component.html
@@ -1,18 +1,18 @@
 <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
     <logo>
-        <a class="logo navbar-brand waves-light" mdbRippleRadius href="#"><strong>Memories of
-            Martian</strong></a>
+        <a class="logo navbar-brand waves-light" mdbRippleRadius
+           href="#"><strong>Записки марсианина</strong></a>
     </logo>
     <links>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active waves-light" mdbRippleRadius>
-                <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link">Главная<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link">Link#1</a>
+                <a class="nav-link">Ссылка#1</a>
             </li>
             <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link">Link#2</a>
+                <a class="nav-link">Ссылка#2</a>
             </li>
         </ul>
     </links>
