--- a/src/app/components/parallax-images/image-second.component.html
+++ b/src/app/components/parallax-images/image-second.component.html
@@ -6,11 +6,11 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h1 class="h1-reponsive white-text font-up font-bold mb-3 animated fadeInDown"
-                            data-wow-delay="0.3s"><strong>Memories of Martian</strong></h1>
+                            data-wow-delay="0.3s"><strong>Записки марсианины</strong></h1>
                         <hr class="hr-light mt-4 animated fadeInDown" data-wow-delay="0.4s">
                         <h5 class="font-up mb-5 white-text animated fadeInDown"
-                            data-wow-delay="0.4s"><strong>Extraordinary thoughts about space and
-                            not only</strong></h5>
+                            data-wow-delay="0.4s"><strong>Экстраординарные мысли о
+                            космосе и не только</strong></h5>
                     </div>
                 </div>
             </div>
